# optimal_portfolio

./: .gitignore  AGENTS.md  README.md  app.py  backtest.py  dashboard-styling.md  dashboard.py  ooot.md  out.md  param_search.py  portfolio_tickers.json  prd.md  pyproject.toml  quick_backtest.py  run_custom_sim.py  run_max_profit.py  run_optimizer.py  run_portfolio_sim.py  run_walk_forward.py  sp500_companies.csv  src.md  test_spy_kama.py
.cursor/hooks/state/: continual-learning-index.json
.cursor/rules/: MarketRules.mdc
.streamlit/: config.toml
LLMs/: Claude App.md  Cursor Claude.md  Gemini Deep.md  Gemini Pro.md
docs/: modules.md
docs/plans/: 2026-02-25-remove-sp500-universe-design.md  2026-02-26-metals-etf-update-design.md  2026-02-26-metals-etf-update-impl.md  2026-02-26-replace-crypto-etfs-design.md  2026-02-26-replace-crypto-etfs.md
output/cache/: close_prices_etf.parquet  open_prices_etf.parquet
output/opt_20260224_234553/: parameter_stability.csv  walk_forward_report.txt
pages/: __init__.py  strategy_rules.py
scripts/: backtest_mvo.py  backtest_r2_params.py  backtest_s2.py  compare_methods.py  compare_strategies.py  wfo_r2_momentum.py  wfo_v2_momentum.py
src/: strategy_rules.py
src/portfolio_sim/: __main__.py  alpha.py  cli.py  cli_utils.py  command.py  command_stability.py  config.py  data.py  engine.py  indicators.py  max_profit.py  models.py  optimization.py  optimizer.py  parallel.py  params.py  reporting.py  stability.py  visualization.py  walk_forward.py
src/portfolio_sim/benchmark_mvo/: __init__.py  engine.py  params.py
src/portfolio_sim/commands/: max_profit.py  (+2 more)
tests/: conftest.py  test_alpha.py  test_config.py  test_dashboard.py  test_data.py  test_engine.py  test_indicators.py  test_max_profit.py  test_optimizer.py  test_reporting.py  test_stability.py  test_walk_forward.py
(+14 files in other folders)
