[project]
name = "optimal_portfolio"
version = "0.1.0"
description = "Simplified KAMA momentum strategy backtester for S&P 500"
requires-python = ">=3.12"
dependencies = [
    "structlog>=25.1.0",
    "pandas>=2.2.0",
    "numpy>=2.0.0",
    "yfinance>=0.2.36",
    "plotly>=5.18.0",
    "matplotlib>=3.9.0",
    "numba>=0.60.0",
    "lxml>=5.0.0",
    "streamlit>=1.40.0",
    "pyarrow>=15.0.0",
    "tqdm>=4.66.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = ["--strict-markers", "--tb=short"]

[tool.ruff]
target-version = "py312"
